syntax = "proto3";

package foo.bar;

import "mixer/tools/codegen/pkg/template_extension/TemplateExtensions.proto";
import "mixer/v1/config/descriptor/value_type.proto";

option (istio.mixer.v1.config.template.template_variety) = TEMPLATE_VARIETY_CHECK;
option (istio.mixer.v1.config.template.template_name) = "List";


message Constructor {
    message submessage {
        int64 f = 1;
    }
    bool blacklist = 1;
    istio.mixer.v1.config.template.Expr check_expression = 2;
    // No imports
    OtherMessage om = 3;
    // result into import of mixer/v1/config/descriptor
    istio.mixer.v1.config.descriptor.ValueType val = 4;

    submessage submsgfield = 5;
}

message Type {
    // EMPTY, since nothing type needs to specify for the
}

message OtherMessage {
    int64 t = 1;
}
